Вроде всё. Сдаю ДЗ 3.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
         </div>
     </header>
     <main>         
-        <!-- Filters -->
-        <section class="filters">
+        <!-- Portfolio-filters -->
+        <section class="portfolio-filters section">
             <div class="container">
                 <h2 hidden>Фильтры</h2>
                 <ul class="filters-list list">
@@ -46,58 +46,107 @@
                     <li class="filters-item"><button class="filters-item-btn" type="button">Приложения</button></li>
                     <li class="filters-item"><button class="filters-item-btn" type="button">Дизайн</button></li>
                     <li class="filters-item"><button class="filters-item-btn" type="button">Маркетинг</button></li>
-                </ul>
-            </div>
-        </section>    
-        <!-- Portfolio -->
-        <section class="portfolio"> 
-            <div class="container">
+                </ul>           
                 <h2 hidden>Портфолио</h2>          
-                <ul class="portfolio-list list">                
+                <ul class="portfolio-card-set list">                
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-1-small.jpg" alt="Проект веб-сайта Технокряк" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Технокряк</h3>
-                        <p class="portfolio-item-txt">Веб-сайт</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-1-small.jpg" alt="Проект веб-сайта Технокряк" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Технокряк</h3>
+                                <p class="portfolio-item-txt">Веб-сайт</p>                            
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-2-small.jpg" alt="Дизайн постера про баскетбол" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Постер New Orlean vs Golden Star</h3>
-                        <p class="portfolio-item-txt">Дизайн</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-2-small.jpg" alt="Дизайн постера про баскетбол" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Постер New Orlean vs Golden Star</h3>
+                                <p class="portfolio-item-txt">Дизайн</p>                            
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-3-small.jpg" alt="Приложение для ресторана Seafood" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Ресторан Seafood</h3>
-                        <p class="portfolio-item-txt">Приложение</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-3-small.jpg" alt="Приложение для ресторана Seafood" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Ресторан Seafood</h3>
+                                <p class="portfolio-item-txt">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-4-small.jpg" alt="Наушники чёрные" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Проект Prime</h3>
-                        <p class="portfolio-item-txt">Маркетинг</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-4-small.jpg" alt="Наушники чёрные" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Проект Prime</h3>
+                                <p class="portfolio-item-txt">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-5-small.jpg" alt="Две коробки, белая и красная" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Проект Boxes</h3>
-                        <p class="portfolio-item-txt">Приложение</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-5-small.jpg" alt="Две коробки, белая и красная" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Проект Boxes</h3>
+                                <p class="portfolio-item-txt">Приложение</p>                            
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-6-small.jpg" alt="Монитор с изображением веб-сайта" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Inspiration has no Borders</h3>
-                        <p class="portfolio-item-txt">Веб-сайт</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-6-small.jpg" alt="Монитор с изображением веб-сайта" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Inspiration has no Borders</h3>
+                                <p class="portfolio-item-txt">Веб-сайт</p>                            
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-7-small.jpg" alt="Открытый журнал с надписью Limited Edition" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Издание Limited Edition</h3>
-                        <p class="portfolio-item-txt">Дизайн</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-7-small.jpg" alt="Открытый журнал с надписью Limited Edition" width="370" height="294" />
+                            </div> 
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Издание Limited Edition</h3>
+                                <p class="portfolio-item-txt">Дизайн</p>
+                            </div>                            
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-8-small.jpg" alt="Белый стикер с надписью Lab El Tag" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Проект LAB</h3>
-                        <p class="portfolio-item-txt">Маркетинг</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-8-small.jpg" alt="Белый стикер с надписью Lab El Tag" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Проект LAB</h3>
+                                <p class="portfolio-item-txt">Маркетинг</p>                            
+                            </div>
+                        </article>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item-photo" src="./images/portfolio-a/project-9-small.jpg" alt="Работа на нетбуке в приложении Growing Business" width="370" height="294" />
-                        <h3 class="portfolio-item-title">Growing Business</h3>
-                        <p class="portfolio-item-txt">Приложение</p>
+                        <article class="card">
+                            <div class="card-thumb">
+                                <img class="portfolio-item-photo" src="./images/portfolio-a/project-9-small.jpg" alt="Работа на нетбуке в приложении Growing Business" width="370" height="294" />
+                            </div>
+                            <div class="card-content">
+                                <h3 class="portfolio-item-title">Growing Business</h3>
+                                <p class="portfolio-item-txt">Приложение</p>                            
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </div>
