--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <!-- Hero -->
         <section class="hero">
             <div class="container-hero">
-                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="hero-btn" type="button">Заказать услугу</button>
             </div>
         </section>    
         <!-- Studio-competence -->        
-            <section class="competence"> 
+            <section class="competence section"> 
                <div class="container container-competence"> 
                     <h2 hidden>Компетенции студии</h2>   
                     <ul class="competence-list list">
@@ -67,7 +67,7 @@
                 </div>
             </section>
         <!-- Studio-affairs -->        
-        <section class="affairs">
+        <section class="affairs section">
             <div class="container">
                 <h2 class="affairs-title">Чем мы занимаемся</h2>
                 <ul class="affairs-list list">
@@ -86,7 +86,7 @@
             </div>
         </section>        
         <!-- Team-personalities -->
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list list container-team">
