Вторая попытка, внесла исправления.

--- a/index.html
+++ b/index.html
@@ -70,18 +70,16 @@
         <section class="affairs section">
             <div class="container">
                 <h2 class="affairs-title">Чем мы занимаемся</h2>
-                <ul class="affairs-list list">
-                    <div class="container-affairs">
-                        <li class="affairs-item">
-                            <img class="affairs-item-photo" src="./images/studio-affairs/img-c1.png" alt="Работа на компъютере и ноутбуке" width="370" height="294" />
-                        </li>
-                        <li class="affairs-item">
-                            <img class="affairs-item-photo" src="./images/studio-affairs/img-c2.png" alt="Работа на смартфоне" width="370" height="294" />
-                        </li>
-                        <li class="affairs-item">
-                            <img class="affairs-item-photo" src="./images/studio-affairs/img-c3.png" alt="Работа на графическом планшете" width="370" height="294" />
-                        </li>
-                    </div>
+                <ul class="affairs-list list">                    
+                    <li class="affairs-item">
+                        <img class="affairs-item-photo" src="./images/studio-affairs/img-c1.png" alt="Работа на компъютере и ноутбуке" width="370" height="294" />
+                    </li>
+                    <li class="affairs-item">
+                        <img class="affairs-item-photo" src="./images/studio-affairs/img-c2.png" alt="Работа на смартфоне" width="370" height="294" />
+                    </li>
+                    <li class="affairs-item">
+                        <img class="affairs-item-photo" src="./images/studio-affairs/img-c3.png" alt="Работа на графическом планшете" width="370" height="294" />
+                    </li>                    
                 </ul>
             </div>
         </section>        
@@ -92,23 +90,31 @@
                 <ul class="team-list list container-team">
                     <li class="team-item">
                         <img class="team-item-photo" src="./images/team-personalities/img-p1.jpg" alt="Фото улыбающегося мужчины с бородой и в очках" width="270" height="260" />
-                        <h3 class="team-item-title">Игорь Демьяненко</h3>
-                        <p class="team-item-txt">Product Designer</p>
+                        <div class="card-team-content">
+                            <h3 class="team-item-title">Игорь Демьяненко</h3>
+                            <p class="team-item-txt">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-photo" src="./images/team-personalities/img-p2.jpg" alt="Фото улыбающейся женщины в очках" width="270" height="260" />
-                        <h3 class="team-item-title">Ольга Репина</h3>
-                        <p class="team-item-txt">Frontend Developer</p>
+                        <div class="card-team-content">
+                            <h3 class="team-item-title">Ольга Репина</h3>
+                            <p class="team-item-txt">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-photo" src="./images/team-personalities/img-p3.jpg" alt="Фото улыбающегося мужчины с бородой" width="270" height="260" />
-                        <h3 class="team-item-title">Николай Тарасов</h3>
-                        <p class="team-item-txt">Marketing</p>
+                        <div class="card-team-content">
+                            <h3 class="team-item-title">Николай Тарасов</h3>
+                            <p class="team-item-txt">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img  class="team-item-photo" src="./images/team-personalities/img-p4.jpg" alt="Фото хитро улыбающегося мужчины с бородой и в очках" width="270" height="260" />
-                        <h3 class="team-item-title">Михаил Ермаков</h3>
-                        <p class="team-item-txt">UI Designer</p>
+                        <div class="card-team-content">
+                            <h3 class="team-item-title">Михаил Ермаков</h3>
+                            <p class="team-item-txt">UI Designer</p>
+                        </div>                    
                     </li>
                 </ul> 
             </div>
@@ -116,7 +122,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <div class="container container-footer">
+        <div class="container footer-container">
             <!-- Logo-WebStudio -->
             <a class="header-link link footer-link" href="">Web<span class="footer-logo">Studio</span></a>
             <!-- Coordinates -->
