--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>    
-    <header class="header">
+    <header class="header portfolio-header">
         <div class="container header-container">
             <!-- Logo-WebStudio -->
             <a class="header-link link" href="">Web<span class="header-logo">Studio</span></a>
@@ -50,7 +50,7 @@
                 <h2 hidden>Портфолио</h2>          
                 <ul class="portfolio-card-set list">                
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-1-small.jpg" alt="Проект веб-сайта Технокряк" width="370" height="294" />
                             </div>
@@ -58,10 +58,10 @@
                                 <h3 class="portfolio-item-title">Технокряк</h3>
                                 <p class="portfolio-item-txt">Веб-сайт</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-2-small.jpg" alt="Дизайн постера про баскетбол" width="370" height="294" />
                             </div>
@@ -69,10 +69,10 @@
                                 <h3 class="portfolio-item-title">Постер New Orlean vs Golden Star</h3>
                                 <p class="portfolio-item-txt">Дизайн</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-3-small.jpg" alt="Приложение для ресторана Seafood" width="370" height="294" />
                             </div>
@@ -80,10 +80,10 @@
                                 <h3 class="portfolio-item-title">Ресторан Seafood</h3>
                                 <p class="portfolio-item-txt">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-4-small.jpg" alt="Наушники чёрные" width="370" height="294" />
                             </div>
@@ -91,10 +91,10 @@
                                 <h3 class="portfolio-item-title">Проект Prime</h3>
                                 <p class="portfolio-item-txt">Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-5-small.jpg" alt="Две коробки, белая и красная" width="370" height="294" />
                             </div>
@@ -102,10 +102,10 @@
                                 <h3 class="portfolio-item-title">Проект Boxes</h3>
                                 <p class="portfolio-item-txt">Приложение</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-6-small.jpg" alt="Монитор с изображением веб-сайта" width="370" height="294" />
                             </div>
@@ -113,10 +113,10 @@
                                 <h3 class="portfolio-item-title">Inspiration has no Borders</h3>
                                 <p class="portfolio-item-txt">Веб-сайт</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-7-small.jpg" alt="Открытый журнал с надписью Limited Edition" width="370" height="294" />
                             </div> 
@@ -124,10 +124,10 @@
                                 <h3 class="portfolio-item-title">Издание Limited Edition</h3>
                                 <p class="portfolio-item-txt">Дизайн</p>
                             </div>                            
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-8-small.jpg" alt="Белый стикер с надписью Lab El Tag" width="370" height="294" />
                             </div>
@@ -135,10 +135,10 @@
                                 <h3 class="portfolio-item-title">Проект LAB</h3>
                                 <p class="portfolio-item-txt">Маркетинг</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="portfolio-item">
-                        <article class="card">
+                        <a class="card link" href="">
                             <div class="card-thumb">
                                 <img class="portfolio-item-photo" src="./images/portfolio-a/project-9-small.jpg" alt="Работа на нетбуке в приложении Growing Business" width="370" height="294" />
                             </div>
@@ -146,7 +146,7 @@
                                 <h3 class="portfolio-item-title">Growing Business</h3>
                                 <p class="portfolio-item-txt">Приложение</p>                            
                             </div>
-                        </article>
+                        </a>
                     </li>
                 </ul>
             </div>
